--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,7 +6,8 @@
     padding: 0 7%;
     height: 80px;
     top: 20px;
-    position: absolute;
+    position: fixed;
+    z-index: 10;
 
     .brand{
         h1{
