--- a/src/pages/Homepage/CaseStudySection/CaseStudiesSection.scss
+++ b/src/pages/Homepage/CaseStudySection/CaseStudiesSection.scss
@@ -28,7 +28,7 @@
             .set{
                 padding: 0 7%;
                 min-width: 100%;
-                margin: 400px 0 0;
+                margin: 300px 0 100px;
                 // max-height: 70vh;
                 display: flex;
                 align-items: flex-end;
