--- a/src/pages/Homepage/ContactSection/ContactSection.scss
+++ b/src/pages/Homepage/ContactSection/ContactSection.scss
@@ -1,13 +1,90 @@
 .contact-section{
     height: 100vh;
-    padding: 60px 7%;
+    padding: 100px 7%;
+    position: relative;
+    text-align: center;
 
     .head{
+        
 
         h1{
             font-size: 28px;
+            text-align: center;
             font-weight: 500;
-            color: rgba(255, 255, 255, 0.415);;
+            color: rgba(255, 255, 255, 0.815);;
+        }
+
+        h3{
+            font-weight: 200;
+            font-size: 20px;
+            width: fit-content;
+            margin: 0 auto;
+            color: rgba(255, 255, 255, 0.515);;
+            padding-left: 25px;
+            position: relative;
+
+            &::before{
+                content: '';
+                width: 20px;
+                height: 1px;
+                background: rgba(255, 255, 255, 0.415);;
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+
+            }
+        }
+    }
+
+    .content{
+        margin: 150px 0;
+
+        .section-1{
+
+            .contact-set{
+                display: flex;
+                cursor: pointer;
+                justify-content: center;
+                align-items: center;
+                margin: 20px 0;
+
+                svg{
+                    fill: rgba(255, 255, 255, 0.529);
+                }
+
+                p{
+                    margin: 0;
+                    color: rgba(255, 255, 255, 0.529);
+                    margin-left: 20px;
+                    font-size: 35px;;
+
+                }
+            }
+        }
+    }
+
+    .last-note{
+        position: absolute;
+        bottom: 7%;
+        right: 0;
+        transform: translateX(-50%);
+        color: rgba(255, 255, 255, 0.295);
+
+        p{
+            margin: 0;
+        
+            #icon_heart{
+                fill: rgba(255, 255, 255, 0.295);
+                height: 13px;
+                display: inline-flex;
+                align-items: center;
+            }
+        }
+
+        .copyright{
+            font-size: 14px;
+            margin-bottom: 3px;
         }
     }
 }
