--- a/src/components/CaseStudyCard/CaseStudyCard.scss
+++ b/src/components/CaseStudyCard/CaseStudyCard.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: flex-end;
     position: relative;
-    padding: 50px 7%;
+    padding: 50px 8%;
     padding-top: 0;
     overflow: hidden;
     justify-content: space-between;
@@ -13,7 +13,7 @@
         bottom: 0;
         width: 100%;
         left: 0;
-        z-index: -2;
+        z-index: -5;
         height: 60%;;;
     }
 
@@ -25,6 +25,7 @@
         align-items: center;
         justify-content: space-between;
         flex-wrap: wrap;
+        overflow: hidden;
         display: grid;
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
@@ -32,6 +33,36 @@
         grid-row-gap: 30px;
 
         .image-container{
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+            box-shadow: 2px 2px 10px rgb(12, 11, 11);
+
+            .image-darkener{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: black;
+                opacity: 0;
+            }
+
+            &:hover{
+
+                .image-darkener{
+                    opacity: 0.3;
+                }
+            }
+
+            &[active = 'true']{
+
+                .image-darkener{
+                    opacity: 0.8;
+                }
+            }
+
+
         
             img{
                 width: 100%;
@@ -42,13 +73,75 @@
     .main-content{
         width: 60%;
 
-        .image-container{
-            max-width: 100%;
+        .image-block{
+            
 
-            img{
-                width: 100%;
+            .container{
+                position: relative;
+                padding-top: 58%;
+                overflow: hidden;
+                
+                .images-container{
+                   width: 100%;
+                   height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+
+                    .image{
+                        width: 100%;
+                        height: 100%;
+                        transform: translateY(100%);
+                        position: absolute;
+                        top: 0;
+                        overflow: hidden;
+                        transform-origin: 50% 50%;
+
+                        img{
+                            width: 100%;
+                            height: 100%;
+                            bottom: 100%;
+                            
+                            left: 0;
+                            transform: translateY(-100%) scale(1.1);
+                            // transform-origin: 50% 50%;
+                        }  
+
+                        &.active{
+                            transform: translateY(0%);
+
+                            img{
+                                transform: translateY(0%);
+                            }
+                        }
+                    }
+                }                
             }
         }
+
+        .details{
+            h1{
+                margin: 15px 0;
+                font-weight: 500;
+                font-size: 22px;
+                color: rgba(255, 255, 255, 0.808);
+            }
+            p{
+                font-size: 15px;
+                line-height: 20px;;
+                color: rgba(255, 255, 255, 0.603);
+                margin: 10px 0;
+            }
+
+            .button-container{
+                margin-top: 20px;
+
+                button{
+                    padding: 10px 15px;
+                }
+            }
+        }
+
     }
 
 
