--- a/src/components/NavMenu/NavMenu.scss
+++ b/src/components/NavMenu/NavMenu.scss
@@ -5,6 +5,8 @@
     top: 0;
     left: 0;
     z-index: 9;
+    overflow: hidden;
+    background: #25272C;
 
     .img-bg-holder,
     .image-darkener{
@@ -16,14 +18,52 @@
     }
 
     .image-darkener{
-        background: rgba(0, 0, 0, 0.879);
+        z-index: -1;
+        background: rgb(0, 0, 0);
+        opacity: 0.75;
     }
 
     .img-bg-holder{
+        z-index: -2;
         
-        background-blend-mode: overlay;
-    background-size: cover;
-    background-position: center;
-        background: url('../../assests//images/dimitar-donovski-cIG6MZFamyU-unsplash.jpg')
+        img{
+            height: 100%;
+        }
+    }
+
+    .content{
+        z-index: 100;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        padding: 0 7%;
+        justify-content: center;
+        color: white;
+
+        ul{
+            list-style: none;
+
+
+            li{
+                font-size: 24px;
+                margin: 32px 0;
+                cursor: pointer;
+                color: rgba(255, 255, 255, 0.5);
+                text-align: center;
+                font-family: 'Kaushan Script', cursive;
+
+                h1{
+                    margin: 0
+                }
+
+                &:hover{
+                    *{
+                        color: rgba(255, 255, 255, 1)!important;
+                    }
+                    
+                }                
+            }
+        }
     }
 }
