--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -47,3 +47,11 @@
 
 
 }
+
+@media only screen and (max-width: 768px){
+    .navbar{
+        padding: 0 5%;
+        top: 5px;
+        height: 60px;
+    }
+}
