--- a/src/pages/Homepage/AboutMeSection/AboutMeSection.scss
+++ b/src/pages/Homepage/AboutMeSection/AboutMeSection.scss
@@ -30,3 +30,23 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px){
+    .about-section{
+        padding: 40px 5%;
+        height: unset;
+
+        .details{
+            
+            h1{
+                font-size: 28px;
+                // text-align: left;
+                line-height: 50px;
+            }
+
+            p{
+                // text-align: left;
+            }
+        }
+    }
+}
