--- a/src/pages/Homepage/ContactSection/ContactSection.scss
+++ b/src/pages/Homepage/ContactSection/ContactSection.scss
@@ -88,3 +88,28 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px){
+    .contact-section{
+        padding: 50px 5%;
+        height: 50vh;
+        .content{
+            margin: 30px 0;
+    
+            .section-1{
+    
+                .contact-set{
+    
+                    svg{
+                        fill: rgba(255, 255, 255, 0.529);
+                    }
+    
+                    p{
+                        font-size: 25px;;
+    
+                    }
+                }
+            }
+        }
+    }
+}
