--- a/src/pages/Homepage/Header/Header.scss
+++ b/src/pages/Homepage/Header/Header.scss
@@ -53,7 +53,7 @@
 
             button{
                 padding: 15px 25px;
-                border-radius: 0;
+                border-radius: 5px;
                 background: white;
                 border:none;
                 outline: none;
@@ -108,9 +108,6 @@
             right: 5%;
             bottom: 10%;
         }
-
-
-
     }
 
     .socials-links{
@@ -119,9 +116,6 @@
         bottom: 5%;
         z-index: 11;
         overflow: hidden;
-
-
-
 
         button{
             border: none;
@@ -135,5 +129,32 @@
         }
     }
 
+}
 
+@media only screen and (max-width: 768px){
+    .homepage-header{
+        .content{
+            margin-left: 5%;
+
+            .content-titles{
+
+                .content-title1{
+                    font-size: 32px;
+                }
+
+                .content-title2{
+                    font-size: 38px;;
+                }
+            }
+        }
+
+        .shapes-container{
+            display: none;
+        }
+
+        .socials-links{
+            margin-left: 5%;
+            bottom: 3%;
+        }
+    }
 }
