--- a/src/components/CaseStudyCard/CaseStudyCard.scss
+++ b/src/components/CaseStudyCard/CaseStudyCard.scss
@@ -14,7 +14,7 @@
         width: 100%;
         left: 0;
         z-index: -5;
-        height: 65%;;;
+        height: 75%;;;
     }
 
 
@@ -96,10 +96,12 @@
                         top: 0;
                         overflow: hidden;
                         transform-origin: 50% 50%;
+                        display: flex;
+                        align-items: center;
 
                         img{
                             width: 100%;
-                            height: 100%;
+                            height: auto;
                             bottom: 100%;
                             
                             left: 0;
@@ -140,6 +142,7 @@
                     border: none;
                     border-radius: 5px;
                     padding: 10px 15px;
+                    margin-right: 20px;
                 }
             }
         }
