--- a/src/pages/Homepage/Header/Header.scss
+++ b/src/pages/Homepage/Header/Header.scss
@@ -35,7 +35,7 @@
 
             .content-title2{
                 overflow: hidden;
-                font-size: 46px;
+                font-size: 76px;
             }
 
         }
@@ -50,15 +50,19 @@
 
         .content-btn-container{
             margin: 20px 0;
+            overflow: hidden;
+            height: fit-content;
 
-            button{
+            a{
+                cursor: pointer;
                 padding: 15px 25px;
+                display: inline-block;
                 border-radius: 5px;
                 background: white;
                 border:none;
                 outline: none;
-                cursor: pointer;
-                ;;
+                color: black;
+                text-decoration: none;
             }
         }
     }
@@ -68,6 +72,7 @@
         height: 100%;
         width: 100%;
         min-width: 600px;
+        z-index: -1;
         margin: 0 7%;
         right: 0;
 
@@ -117,9 +122,10 @@
         z-index: 11;
         overflow: hidden;
 
-        button{
+        a{
             border: none;
-            margin: 0 10px;
+            cursor: pointer;
+            margin: 0 15px;
             background: none;
 
             &:first-child{
