fixed nav menu flash happening on page load.

--- a/src/components/NavMenu/NavMenu.scss
+++ b/src/components/NavMenu/NavMenu.scss
@@ -3,6 +3,7 @@
     position: fixed;
     width: 100vw;
     top: 0;
+    transform: translateY(-100%);
     left: 0;
     z-index: 9;
     overflow: hidden;
