--- a/src/components/CaseStudyCard/CaseStudyCard.scss
+++ b/src/components/CaseStudyCard/CaseStudyCard.scss
@@ -46,6 +46,7 @@
                 height: 100%;
                 background: black;
                 opacity: 0;
+                transition: opacity .5s;
             }
 
             &:hover{
