--- a/src/components/NavMenu/NavMenu.scss
+++ b/src/components/NavMenu/NavMenu.scss
@@ -30,7 +30,9 @@
         justify-content: center;
         
         img{
-            height: 100%;
+            width: 100%;
+            height: auto;
+            min-height: auto;;;
         }
     }
 
@@ -50,7 +52,7 @@
 
 
             li{
-                font-size: 24px;
+                font-size: 22px;
                 margin: 32px 0;
                 cursor: pointer;
                 color: rgba(255, 255, 255, 0.5);
@@ -67,6 +69,20 @@
                     }
                     
                 }                
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .nav-menu{
+        .content{
+            justify-content: flex-start;
+            ul{
+                li{
+                    text-align: left;
+                    font-size: 16px;
+                }
             }
         }
     }
