--- a/src/pages/Homepage/AboutMeSection/AboutMeSection.scss
+++ b/src/pages/Homepage/AboutMeSection/AboutMeSection.scss
@@ -1,6 +1,6 @@
 .about-section{
     padding: 40px 15%;
-    height: 85vh;
+    min-height: 100vh;
     text-align: center;
 
     .head{
@@ -10,14 +10,15 @@
             font-weight: 200;
             font-size: 20px;
             margin-top: 50px;
+            margin-bottom: 0;
             text-align: center;
         }
     }
 
     .details{
-        margin-top: 50px;
+        margin-top: 40px;
         h1{
-            font-size: 36px;
+            font-size: 32px;
             line-height: 55px;
             margin-top: 20px;
         }
@@ -27,6 +28,19 @@
             font-size: 20px;
             line-height: 30px;
             margin-top: 20px;
+        }
+    }
+
+    .technologies{
+        .tech-set{
+            width: 33.3%;
+            display: inline-block;
+
+            h2{
+                margin: 5px;
+                font-size: 20px;
+                font-weight: 300;
+            }
         }
     }
 }
@@ -39,13 +53,29 @@
         .details{
             
             h1{
-                font-size: 28px;
+                font-size: 22px;
                 // text-align: left;
-                line-height: 50px;
+                line-height: 37px;
             }
 
-            p{
-                // text-align: left;
+        }
+        .technologies{
+            .tech-set{
+                h2{
+                    // font-size: ;
+                }
+            }
+        }
+    }
+}
+
+
+@media only screen and (max-width: 768px){
+    .about-section{
+        .technologies{
+            .tech-set{
+                width: 50%;
+
             }
         }
     }
