--- a/src/pages/Homepage/ContactSection/ContactSection.scss
+++ b/src/pages/Homepage/ContactSection/ContactSection.scss
@@ -1,5 +1,5 @@
 .contact-section{
-    height: 100vh;
+    min-height: 70vh;
     padding: 100px 7%;
     position: relative;
     text-align: center;
@@ -53,11 +53,16 @@
                     fill: rgba(255, 255, 255, 0.529);
                 }
 
-                p{
+                a{
                     margin: 0;
                     color: rgba(255, 255, 255, 0.529);
                     margin-left: 20px;
-                    font-size: 35px;;
+                    font-size: 35px;
+                    transition: all .5s;
+
+                    &:hover{
+                        color: white;
+                    }
 
                 }
             }
@@ -73,13 +78,6 @@
 
         p{
             margin: 0;
-        
-            #icon_heart{
-                fill: rgba(255, 255, 255, 0.295);
-                height: 13px;
-                display: inline-flex;
-                align-items: center;
-            }
         }
 
         .copyright{
@@ -92,6 +90,7 @@
 @media only screen and (max-width: 768px){
     .contact-section{
         padding: 50px 5%;
+        min-height: 300px;
         height: 50vh;
         .content{
             margin: 30px 0;
@@ -104,12 +103,20 @@
                         fill: rgba(255, 255, 255, 0.529);
                     }
     
-                    p{
+                    a{
                         font-size: 25px;;
     
                     }
                 }
             }
         }
+
+        .last-note{
+            bottom: 10%;
+            transform: translateX(-20%);
+        }       
     }
+
+
+
 }
