--- a/src/components/LoadingScreen/LoadingScreen.scss
+++ b/src/components/LoadingScreen/LoadingScreen.scss
@@ -20,6 +20,11 @@
                 height: 100%;
                 width: 100%;
                 overflow: hidden;
+
+                path{
+                transform: translateY(130%)
+
+                }
             }
         }
     }
@@ -32,6 +37,7 @@
             margin: 0;
             font-weight: 300;
             font-size: 26px;
+            transform: translateY(100%)
         };
     }
 }
