--- a/src/components/LoadingScreen/LoadingScreen.scss
+++ b/src/components/LoadingScreen/LoadingScreen.scss
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    background: #17171a;
+    background: #0c0c0e;
 
     .name-container{
         width: 45%;
