content fix still

--- a/src/components/NavMenu/NavMenu.scss
+++ b/src/components/NavMenu/NavMenu.scss
@@ -80,6 +80,8 @@
         .img-bg-holder{
             img{
                 min-width: auto;
+                height: 100%;
+                width: auto;;
             }
         }
         .content{
