--- a/src/components/CaseStudyCard/CaseStudyCard.scss
+++ b/src/components/CaseStudyCard/CaseStudyCard.scss
@@ -136,7 +136,7 @@
                     font-size: 15px;
                     line-height: 20px;;
                     color: rgba(255, 255, 255, 0.603);
-                    margin: 10px 0;
+                    margin: 0;
                 }                
             }
 
