--- a/src/pages/Homepage/AboutMeSection/AboutMeSection.scss
+++ b/src/pages/Homepage/AboutMeSection/AboutMeSection.scss
@@ -21,6 +21,7 @@
             font-size: 32px;
             line-height: 55px;
             margin-top: 20px;
+            font-weight: 500;
         }
 
         p{
