changed some images in portfolio card to make all uniform. Added linkedin to social links

--- a/src/pages/Homepage/Header/Header.scss
+++ b/src/pages/Homepage/Header/Header.scss
@@ -139,6 +139,22 @@
         z-index: 11;
         overflow: hidden;
 
+        svg{
+            path{
+                fill: white;
+                fill-opacity: 0.5;
+                transition: all .7s;
+
+               
+            } 
+
+            &:hover{
+                path{
+                    fill-opacity: 1;
+                }
+            }
+        }
+
 
 
         a{
@@ -181,6 +197,10 @@
         .socials-links{
             margin-left: 5%;
             bottom: 3%;
+
+            a{
+                margin: 0 10px;
+            }
         }
     }
 }
