--- a/src/pages/Homepage/Header/Header.scss
+++ b/src/pages/Homepage/Header/Header.scss
@@ -140,6 +140,11 @@
         overflow: hidden;
 
         svg{
+        background: rgba(0, 0, 0, 0.35);
+        padding: 10px;
+        width: 40px;
+        height: 40px;
+        border-radius: 10px;
             path{
                 fill: white;
                 fill-opacity: 0.5;
@@ -197,9 +202,10 @@
         .socials-links{
             margin-left: 5%;
             bottom: 3%;
+            
 
             a{
-                margin: 0 10px;
+                margin: 0 5px;
             }
         }
     }
